--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,5 @@
-.container{
-    height: 93vh;
+.log-container{
+    height: 86vh;
     width: 100vw;
     display: flex;
     /* flex-direction: column; */
@@ -8,7 +8,7 @@
     /* padding: 30px; */
 }
 
-.login-form{
+.log-login-form{
     /* border: 5px solid blue; */
     width: 50%;
     height:100%;
@@ -18,13 +18,13 @@
     justify-content:center;
 }
 
-.heading{
+.log-heading{
     font-size: 50px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-.input-fields{
+.log-input-fields{
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
 
 }
 
-.input-fields input{
+.log-input-fields input{
     height: 40px;
     width: 250px;
     padding: 5px 8px;
@@ -45,9 +45,9 @@
     border-radius: 8px;
 }
 
-.design-part{
+.log-design-part{
     /* border: 5px solid rgb(211, 210, 210); */
-    border-radius: 65px 0px 0px 65px;
+    border-radius:  65px 0px 0px 65px;
     width: 50%;
     height:100%;
     display: flex;
@@ -55,12 +55,16 @@
     align-items:center;
     justify-content:center;
     /* background: rgb(211, 210, 210); */
-    background: black;
+    background: #1D1A26;
+    color: white;
+}
+
+.log-login-form p a{
     color: white;
 }
 
 
-.login-form button{
+.log-login-form button{
     width: 150px;
     height: 50px;
     font-size: 18px;
@@ -72,12 +76,12 @@
     color: white;
 }
 
-.login-form button:active{
+.log-login-form button:active{
     background-color: white;
     color: black;
 }
 
-.login-form p{
+.log-login-form p{
     padding: 5px;
     margin-left: -25px;
 }
