--- a/src/styles/trackBar.css
+++ b/src/styles/trackBar.css
@@ -58,52 +58,29 @@
   .step:first-child::before {
     display: none;
   }
-  
 
-@media (max-width: 420px) {
+  @media (max-width: 420px) {
     .tracking-container {
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 3px; 
-      width: 90%;
-    }
-  
-    .step {
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
-      width: 100%;
+      width: 100%; 
     }
   
     .circle {
-      width: 22px;
-      height: 22px;
-      font-size: 12px; 
-      margin-right: 12px; 
+      width: 18px;
+      height: 18px;
+      font-size: 10px;
     }
   
     .label {
-      font-size: 12px;
-      color: #B8B6C0; 
+      margin-top: 6px;
+      font-size: 12px; 
     }
   
     .step::before {
-      width: 4px; 
-      height: 100%; 
-      left: 10px; 
-      top: -70%; 
-      transform: translateY(50%); 
+      top: 8px; 
+      height: 2px;
     }
   
     .step:first-child::before {
       display: none;
     }
-
-    .resp{
-        border-top: 1px solid white;
-        width: 100;
-        padding: 5px 10px 5px 10px;
-        /* border-t w-full px-10 py-5 */
-    }
   }
-  
